<resources>
    <string name="app_name">DEM</string>
    <string name="sliceOptionButtonLabel">Slice Option</string>
    <string name="minusOptionButtonLabel">Minus Option</string>
    <string name="switchPlotOpionLabel">Switch the Plot Option</string>
    <string name="savedFileButtonLabel">Save Data</string>
    <string name="perspectiveButtonLabel">Change Perspective</string>
    <string name="textViewNameLabel">Name</string>
    <string name="textViewCommentLabel">Insert Comment</string>
    <string name="buttonSaveNewEntryLabel">Save</string>
    <string name="loadFileButton">Load Data</string>
    <string name="buttonDeleteFilesLabel">Delete File</string>
    <string name="buttonLoadDataLabel">Load File</string>
    <string name="buttonShowCommentLabel">Comment</string>

    <string name="sliceOptionSwitch">Slice Option</string>
    <string name="minusOptionSwitch">Minus Option</string>

    <string name="plainViewLabel">Plain View</string>
    <string name="imprintLabel">Impressum</string>

    <string name="Q1">Q1</string>
    <string name="P1">P1</string>
    <string name="Q2">Q2</string>
    <string name="P2">P2</string>
    <string name="changeCommentButtonLabel">Save Changes</string>
    <string name="labelK2Text">K2</string>
    <string name="labelK1Text">K1</string>
    <string name="labelAText">A</string>
</resources>
