<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
    <item
        android:id="@+id/loadFileButton"
        android:title="@string/loadFileButton"
        app:showAsAction="always" />
    <item
        android:id="@+id/savedFileButtonLabel"
        android:title="@string/savedFileButtonLabel"
        app:showAsAction="always"
        android:titleCondensed="2" />
    <item
        android:id="@+id/sliceOptionSwitch"
        android:title="@string/sliceOptionSwitch"
        app:showAsAction="always"
        android:checkable="true"/>
    <item
        android:id="@+id/imprintLabel"
        android:title="@string/imprintLabel"
        app:showAsAction="always" />
    </group>

</menu>